Fix wrong position of footer

--- a/public/styles.css
+++ b/public/styles.css
@@ -30,6 +30,8 @@ footer {
   bottom: 0;
   width: 100%;
   height: 2.5rem;
+  left: 0px;
+  right: 0px;
 }
 
 footer p {
